grafana/loki/generated/grafana-loki/templates/gateway/service.yaml
---
# Source: grafana-loki/templates/gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-gateway
  namespace: "grafana-loki"
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: grafana-loki
    app.kubernetes.io/version: 1.27.0
    helm.sh/chart: grafana-loki-4.6.9
    app.kubernetes.io/part-of: grafana-loki
    app.kubernetes.io/component: gateway
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: null
  selector:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/name: grafana-loki
    app.kubernetes.io/part-of: grafana-loki
    app.kubernetes.io/component: gateway
